# MyPasswordManager

./: .gitignore  README.md  app.py  logging.conf  mpm_config.py  pyproject.toml  requirements.txt  secret.key
.github/workflows/: master_mypasswordmanager.yml
instance/: mpm.sqlite
mpm/: auth.py  create_app.py  db.py  pm.py  schema.sql
mpm/core/: security.py
mpm/forms/: password_manager_forms.py
mpm/static/: style.css
mpm/templates/: 404.html  base.html  michi.html
mpm/templates/auth/: register.html
mpm/templates/pm/: create.html  index.html  update.html  view.html
