[project]
name = "MyPasswordManager"
version = "1.0.0"
description = "A basic password manager built with Flask"
dependencies = [
    "flask",
    "SQLAlchemy",
    "dataclasses",
    "pytz",
    "cryptography",
    "Flask-WTF",
    "wtforms"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"